# retail-ai-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  main.py  rag.py
app/agent/: graph.py  llm.py  memory.py  price_guard.py  prompts.py  service.py  toolset.py  trace.py
app/api/: routes.py  schemas.py
app/data/: db.py  products.json  schema.sql  seed.py
app/data/policies/: devoluciones.md  envios_y_entregas.md  garantias.md  preguntas_frecuentes.md
app/domain/: recommender.py  validators.py
app/tools/: base.py  catalog_tools.py  customer_tools.py  escalation_tools.py  order_tools.py  policy_tools.py  warranty_tools.py
docs/: Prueba_Tecnica_DesarrolladorIA_markdown_y_solucion.md
evals/: grounding.py  judge.py  run.py  scenarios.py
tests/: conftest.py  test_price_guard.py  test_recommender.py  test_service_clean.py  test_tools.py  test_validators.py
ui/: streamlit_app.py
