[project]
name = "retail-ai-agent"
version = "0.1.0"
description = "Conversational AI agent for electronics retail (sales, orders, warranty support)."
requires-python = ">=3.12"
dependencies = [
    # Orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",   # chat via Ollama's OpenAI-compatible endpoint (provider-swappable)
    "langchain-ollama>=0.2.0",   # local embeddings (nomic-embed-text)
    # RAG
    "chromadb>=0.5.0",
    # Contracts / config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Backend
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    # Frontend
    "streamlit>=1.37",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
